@@ -1,15 +1,17 @@
-[gd_scene load_steps=5 format=3 uid="uid://dm8sksf3b1gcw"]
+[gd_scene load_steps=6 format=3 uid="uid://dm8sksf3b1gcw"]
 
 [ext_resource type="Script" uid="uid://ccq70upyqje4r" path="res://Board/UnitCircleComponent.cs" id="1_c2ben"]
 [ext_resource type="Script" uid="uid://d0xdsvmtayatq" path="res://Components/CardRotationContainer.cs" id="2_o1h87"]
 [ext_resource type="PackedScene" uid="uid://b3rw6rjka7eon" path="res://Card/Card.tscn" id="3_j7olg"]
 [ext_resource type="Script" uid="uid://dwrq2pnaqfw1s" path="res://HUD/DropArea.cs" id="4_5133l"]
+[ext_resource type="Script" uid="uid://cjx77gr8u66sg" path="res://HUD/DragArea.cs" id="5_o1h87"]
 
 [node name="UnitCircleComponent" type="PanelContainer"]
 custom_minimum_size = Vector2(189, 189)
 offset_right = 4.0
 offset_bottom = 4.0
 script = ExtResource("1_c2ben")
+Draggable = true
 
 [node name="BG" type="ColorRect" parent="."]
 layout_mode = 2
@@ -40,3 +42,10 @@ visible = false
 layout_mode = 2
 script = ExtResource("4_5133l")
 metadata/_custom_type_script = "uid://dwrq2pnaqfw1s"
+
+[node name="DragArea" type="Control" parent="."]
+unique_name_in_owner = true
+visible = false
+layout_mode = 2
+script = ExtResource("5_o1h87")
+metadata/_custom_type_script = "uid://cjx77gr8u66sg"
