@@ -1,0 +1,4 @@
+public enum ComponentInputState
+{
+    Droppable, Draggable, ScreenDraggable, Hoverable, None
+}
